--- a/miniprogram/pages/my_house/my_house.wxss
+++ b/miniprogram/pages/my_house/my_house.wxss
@@ -1,1 +1,15 @@
 /* pages/my_house/my_house.wxss */
+.section{
+  display: flex;
+  flex-direction: row;
+  margin: 20rpx;
+ }
+ .section view{
+  margin-right: 20rpx;
+ }
+ .btn-area{
+  margin: 20rpx;
+ }
+ button{
+  margin: 10rpx 0;
+ }
