--- a/miniprogram/pages/my_house/my_house.wxml
+++ b/miniprogram/pages/my_house/my_house.wxml
@@ -1,6 +1,9 @@
 <!--pages/my_house/my_house.wxml-->
 <text>pages/my_house/my_house.wxml</text>
 <form bindsubmit="formSubmit" bindreset="formReset">
+  <view>
+    <button type="primary" bindtap="uploadImg">上传房源</button>
+  </view>
  <view class="section section_gap">
   <view class="section__title">是否公开信息</view>
   <switch name="isPub" />
