--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -33,42 +33,36 @@
 }
 
 .content{
-  margin:20rpx;
-  width:730rpx;
+  height: 245rpx;
+  margin-left: 21.4rpx;
+  margin-top: 40rpx;
   text-align:center;
-  border-top: 1rpx solid #e0e0e0;
+  border-bottom: 1rpx solid #E4E5EA;
   display: flex;
   flex-direction: row;
 }
 .img{
-  width: 200rpx;
-  height: 130rpx;
-  margin-right:10rpx;
+  width: 220rpx;
+  height: 176rpx;
+  border-radius: 8rpx;
+  margin-top: 30rpx;
 }
 .maincontent{
-  width: 550rpx;
-  text-align:center;
-  border-top: 1rpx solid #e0e0e0;
+  height: 245rpx;
+  margin-left: 21.4rpx;
+  margin-top: 30rpx;
   display: flex;
   flex-direction: column;
-  background-color: aliceblue;
-  color: dimgray;
-  font-style: normal;
-  font-size: small;
-  justify-content: space-between;
+  width: 450rpx;
+  flex:1;
 }
-/* .line-limit-length {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap; 
-} */
+
 
 .title{
   text-align: left;
   width: 100%;
   display: inline-block;
   overflow:hidden;
-  /* white-space: pre-wrap; */
   white-space:nowrap;
   text-overflow:ellipsis;
 
@@ -76,11 +70,13 @@
 }
 .info{
   text-align: left;
+  margin-top:15rpx;
 }
 .price{
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
   font-size: medium;
+  margin-top:30rpx;
   font-weight: 600;
 
 }
